--- a/css/slyles.css
+++ b/css/slyles.css
@@ -45,12 +45,18 @@ img {
 
 /* Container */
 
-.container {
+/* .container {
     width: 1158px;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+} */
+.container {
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
 }
 
 
@@ -442,15 +448,26 @@ list-style: none;
 .hero {
 text-align: center;
 max-width: 1440px;
-margin: 0 auto;
-padding-top: 188px;
-padding-bottom: 188px;
+margin-right: auto;
+margin-left: auto;
+padding-top: 112px;
+padding-bottom: 112px;
 background-color: var(--footer-background-color);
 background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
 
+}
+
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .hero {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)),
+    url("../images/hero-background2.jpg");
+    }
 }
 
 .advantages {
@@ -475,13 +492,17 @@ background-size: cover;
 }
 
 .hero-title {
+    max-width: 320px;
+    margin-right: auto;
+    margin-left: auto;
     font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
+    font-size: 36px;
+    line-height: 1.11;
     text-align: center;
     letter-spacing: 0.02em;
+    text-transform: capitalize;
     color: var(--hero-title-color);
-    margin-bottom: 48px;
+    margin-bottom: 72px;
     
 }
 
