--- a/css/slyles.css
+++ b/css/slyles.css
@@ -30,11 +30,18 @@ p {
 ul {
     margin: 0;
     padding: 0;
+    list-style: none;
+}
+
+
+a {
+    text-decoration: none;
 }
 
 img {
     display: block;
     width: 100%;
+    height:auto
 }
 
 *,
@@ -45,12 +52,9 @@ img {
 
 /* Container */
 
-.container {
-    width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
+.container {    
+    max-width: 428px;
+    margin: 0 auto;
 }
 
 
@@ -74,11 +78,17 @@ img {
     list-style: none;
     display: flex;}
 
-.page-header {
+.header {
 text-align: center;
 background: #ffffff;
 border-bottom: 1px solid #e7e9fc;
 box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .adress {
@@ -86,7 +96,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     font-style: normal
 }
 
-.mail-tel {
+.menu-adress {
 line-height: 1.5;
 letter-spacing: 0.02em;
 font-style: normal;
@@ -244,12 +254,12 @@ list-style: none;
     color: var(--navigation);
     padding-top: 24px;
     padding-bottom: 24px;
-    display: inline-block;
+    display: block;
     position: relative;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.current-link {
+/* .current-link {
     color: #404BBF;
 }
 
@@ -265,16 +275,95 @@ list-style: none;
     height: 4px;
     border-radius: 2px;
     background-color: #404BBF;
-}
+} */
 
 .navigation:hover,
 .navigation:focus {
     color: #404bbf;
 }
 
-.main-nav {
+.header-container {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
+
+.menu-adress,
+.menu-list {
+    display: none;
+}
+
+.mobile-menu-open {
+    background: transparent;
+    border: transparent;
+    padding: 0;
+    line-height: 0;
+    stroke: #2e2f42;
+}
+
+/* ---------------mobil-menu------------ */
+.mob-menu {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #f4f4fd;
+    padding: 80px 5px 40px 40px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-menu.is-hidden {
+    transform: translateX(100%);
+}
+
+.mob-menu-link,
+.mob-adress-link.tel {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;    
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+}
+
+.mob-menu-link {
+    color: #2E2F42;
+}
+
+.mob-menu-item+.mob-menu-item {
+    margin-top: 20px;
+}
+
+.mob-adress-menu {
+    margin-top: auto;
+    margin-bottom: 48px;
+}
+
+.mob-adress-link.tel {
+    color: #4d5ae5;
+}
+
+.mob-adress-link.mail {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    /* 24/20 */
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.mob-adress-item+.mob-adress-item {
+    margin-top: 40px;
+}
+
+.mob-social {
+    display: flex;
+    gap: 26px;
+}
+
 
 .connection {
     font-weight: 400;
@@ -282,8 +371,6 @@ list-style: none;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--primary-text-color);
-    padding-top: 24px;
-    padding-bottom: 24px;
     display: block;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -389,6 +476,7 @@ list-style: none;
 }
 
 
+
 .footer-input-email {
     display: flex;
     justify-content: center;
@@ -405,6 +493,10 @@ list-style: none;
     background-color: transparent;
 }
 
+.footer-input ::placeholder {
+    color: #FFFFFF
+}
+
 .subscribe-btn {
     display: flex;
     align-items: center;
@@ -415,6 +507,7 @@ list-style: none;
     height: 40px;
     font-weight: 500;
     line-height: 1.5;
+    letter-spacing: 0.04em;
     background-color: #4D5AE5;
     color: #FFFFFF;
     border-color: transparent;
@@ -441,12 +534,12 @@ list-style: none;
 
 .hero {
 text-align: center;
-max-width: 1440px;
+max-width: 480px;
 margin: 0 auto;
 padding-top: 188px;
 padding-bottom: 188px;
 background-color: var(--footer-background-color);
-background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-mob-background.jpg);
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
@@ -476,13 +569,12 @@ background-size: cover;
 
 .hero-title {
     font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
+    font-size: 36px;
+    line-height: 1.11;
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--hero-title-color);
-    margin-bottom: 48px;
-    
+    margin-bottom: 72px;    
 }
 
 .visually-hidden {
@@ -769,6 +861,7 @@ text-align: center;
     padding-top: 72px;
     padding-right: 24px;
     padding-left: 24px;
+    padding-bottom: 24px;
 }
 
 .backdrop.is-hidden .modal {
@@ -840,6 +933,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubi
     outline: transparent;
     background-color: transparent;
 }
+
 
 .modal-input:focus {
     border-color: rgba(77, 90, 229, 1);
