--- a/css/desktop.css
+++ b/css/desktop.css
@@ -3,6 +3,29 @@
     margin: 0 auto;
 }
 
+.section3 {
+    list-style: none;
+    display: flex;
+}
+
+.header {
+    text-align: center;
+}
+
+.connection {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.adress-link+.adress-link {
+    margin-top: 0;
+}
+
 .menu-adress {
     display: flex;
     gap: 40px;
@@ -21,11 +44,65 @@
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
 }
 
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+screen and (min-resolution: 192dpi) and (min-width: 1200px),
+screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url(../images/people-office2.jpg);
+    }
+}
+
 .hero-title {
-    font-weight: 700;
-    font-size: 56px;
+
+    font-weight: 700;    
     margin-bottom: 48px;
 
+}
+
+.advantage-list {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    flex-wrap: nowrap;
+    gap: 24px;
+}
+
+.advantages-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
+    color: var(--accent-color)
+}
+
+.feature {
+    list-style: none;
+    width: calc((100% - 48px) / 4);
+    margin: 0;
+    padding: 0;
+}
+
+.feature-icon {
+    width: 64px;
+    height: 64px;
+    fill: #2e2f42;
+}
+
+.feature-icon-location {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 8px;
+    height: 112px;
+    background: #f4f4fd;
+    border-radius: 4px;
+}
+
+.feature:not(:last-child) {
+    margin-right: 24px;
 }
 
 .current-link {
@@ -43,4 +120,113 @@
     height: 4px;
     border-radius: 2px;
     background-color: #404BBF;
+}
+
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+    gap: 24px;
+}
+
+.gallery {
+    display: block;
+}
+
+.galery-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    text-transform: capitalize;
+    letter-spacing: 0.02em;
+    color: var(--navigation);
+    margin-bottom: 72px;
+}
+
+.section-gallery {
+    list-style: none;
+    display: flex;
+}
+
+.section2 {
+    padding-top: 120px;
+}
+
+
+
+.section-photo:not(:last-child) {
+margin-right: 24px;
+}
+
+.team-list {
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+}
+
+.customers {
+    padding-bottom: 120px;
+    padding-top: 120px;
+}
+
+.flex-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    list-style: none;
+    align-items: flex-start;
+    column-gap: 24px;
+}
+
+.footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.footer-box {
+    display: flex;
+    align-items: baseline;
+}
+
+.footer-soc-media {
+    margin-bottom: 0;
+    margin-left: 120px;
+    margin-right: 80px;
+}
+
+.footer-input {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+.footer-input-email {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 40px;
+    padding: 8px 16px;
+    font-size: 12px;
+    line-height: 0.2;
+    letter-spacing: 0.04em;
+    border: 1px solid #FFFFFF;
+    color: #FFFFFF;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color: transparent;
+}
+
+.footer-input ::placeholder {
+    color: #FFFFFF
+}
+
+.footer-box {
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding-left: 15px;
+}
+
+.footer-content {
+    margin-bottom: 0;
 }
