--- a/css/slyles.css
+++ b/css/slyles.css
@@ -20,6 +20,11 @@
 
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 h1,
 h2,
 h3,
@@ -52,11 +57,23 @@ img {
 
 /* Container */
 
-.container {    
-    max-width: 428px;
-    margin: 0 auto;
+@media screen and (min-width: 428px) {
+    .container {
+        max-width: 428px;
+        margin: 0 auto;
+    }
 }
 
+@media screen and (min-width: 428px) {
+    .modal {
+        width: 392px;
+        padding: 72px 24px 24px;
+    }
+
+    .modal-form {
+        width: 100%;
+    }
+}
 
 
 /*-----------------------main-regulation------------------------*/
@@ -66,20 +83,11 @@ img {
     background-color: var(--primary-bg-color);
 }
 
-.section {
-    padding-top: 96px;
-    padding-bottom: 120px;
-    gap: 24px;
-}
 
-.section2 {padding-top: 120px;}
 
-.section3 {
-    list-style: none;
-    display: flex;}
 
 .header {
-text-align: center;
+
 background: #ffffff;
 border-bottom: 1px solid #e7e9fc;
 box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
@@ -96,6 +104,10 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     font-style: normal
 }
 
+.adress-link+.adress-link {
+    margin-top: 12px;
+}
+
 .menu-adress {
 line-height: 1.5;
 letter-spacing: 0.02em;
@@ -110,27 +122,33 @@ list-style: none;
     align-items: flex-start;
 }
 
-.adnvantage-list {
+.flex-list {
     display: flex;
-    margin: 0;
-    padding: 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 64px;
 }
 
-.feature {
-    list-style: none;
-    width: calc((100% - 48px) / 4);
-    margin: 0;
-    padding: 0;
+.flex-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 16px;
+    row-gap: 72px;
 }
 
-.feature-icon {
-    width: 64px;
-    height: 64px;
-    fill: #2e2f42;
-    }
+
+.adnvantage-list .advantages-text {
+font-weight: 500;
+}
+
+.advantage-list .list-item {
+    margin-bottom: 72px;
+}
 
 .feature-icon-location {
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     margin-bottom: 8px;
@@ -139,9 +157,6 @@ list-style: none;
     border-radius: 4px;
 }
 
-.feature:not(:last-child) {
-    margin-right: 24px;
-}
 
 .nav-title:not(:last-child) {
     margin-right: 40px;
@@ -313,11 +328,17 @@ list-style: none;
     justify-content: space-between;
     background-color: #f4f4fd;
     padding: 80px 5px 40px 40px;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    overflow: auto;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mob-menu.is-hidden {
+.mob-menu  {
     transform: translateX(100%);
+   
+}
+
+.mob-menu-list {
+    margin-bottom: 64px;
 }
 
 .mob-menu-link,
@@ -333,8 +354,9 @@ list-style: none;
     color: #2E2F42;
 }
 
+
 .mob-menu-item+.mob-menu-item {
-    margin-top: 20px;
+    margin-top: 40px;
 }
 
 .mob-adress-menu {
@@ -350,7 +372,6 @@ list-style: none;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
-    /* 24/20 */
     letter-spacing: 0.02em;
     color: #434455;
 }
@@ -361,15 +382,19 @@ list-style: none;
 
 .mob-social {
     display: flex;
-    gap: 26px;
+    gap: 56px;
+}
+
+.current-link {
+    color: #404BBF;
 }
 
 
 .connection {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
     color: var(--primary-text-color);
     display: block;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -381,6 +406,8 @@ list-style: none;
 }
 
 .footer-text {
+    text-align: left;
+    font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -391,17 +418,28 @@ list-style: none;
 
 .footer {
     background-color: var(--footer-background-color);
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
 
 .footer-box {
     display: flex;
-    align-items: baseline;
+    flex-direction: column;
+    align-items: center;
 }
 
 .footer-soc-media {
-    margin-left: 120px;
+    display: block;
+    text-align: center;
+    margin-bottom: 68px;
+}
+
+
+.footer-content {
+    max-width: 268px;
+    display: block;
+    text-align: center;
+    margin-bottom: 72px;
 }
 
 .social-text {
@@ -410,7 +448,6 @@ list-style: none;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #FFFFFF;
-    width: 264px;
 }
 
 .footer-link {
@@ -420,7 +457,7 @@ list-style: none;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: #4D5AE5;
     fill: #FFFFFF;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
@@ -457,7 +494,9 @@ list-style: none;
 }
 
 .footer-subscribe {
-    margin-left: auto
+    display: block;
+    text-align: center;
+    width: 100%;
 }
 
 .footer-header {
@@ -471,31 +510,27 @@ list-style: none;
 
 .footer-input {
     display: flex;
-    justify-content: center;
-    gap: 24px;
+    flex-direction: column;
+    align-items: center;
 }
 
 
 
 .footer-input-email {
-    display: flex;
-    justify-content: center;
-    width: 264px;
+    width: 100%;
     height: 40px;
     padding: 8px 16px;
     font-size: 12px;
     line-height: 0.2;
     letter-spacing: 0.04em;
-    border: 1px solid #FFFFFF;
+    border: 1px solid rgba(255, 255, 255, 0.3);
     color: #FFFFFF;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     background-color: transparent;
+    margin-bottom: 16px;
 }
 
-.footer-input ::placeholder {
-    color: #FFFFFF
-}
 
 .subscribe-btn {
     display: flex;
@@ -536,28 +571,47 @@ list-style: none;
 text-align: center;
 max-width: 480px;
 margin: 0 auto;
-padding-top: 188px;
-padding-bottom: 188px;
+padding-top: 112px;
+padding-bottom: 112px;
 background-color: var(--footer-background-color);
 background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-mob-background.jpg);
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
+}
 
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 768px),
+screen and (min-resolution: 192dpi) and (max-width: 768px),
+screen and (min-resolution: 2dppx) and (max-width: 768px) {
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url(../images/hero-mob-background2.jpg);
+    }
+}
+
+.container {
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .advantages {
-    display: flex;
+ padding-top: 96px;
+ padding-bottom: 96px;
 }
 
-.advantages-title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
+.mobil-list-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
     letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2E2F42;
     margin-bottom: 8px;
-    color: var(--accent-color)
 }
+
 
 .advantages-text {
     font-size: 16px;
@@ -568,9 +622,12 @@ background-size: cover;
 }
 
 .hero-title {
+    max-width: 320px;    
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.11;
+    line-height: 1.07;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--hero-title-color);
@@ -590,30 +647,24 @@ background-size: cover;
     padding: 0;
 }
 
-
-.galery-title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    text-transform: capitalize;
-    letter-spacing: 0.02em;
-    color: var(--navigation);
-    margin-bottom: 72px;
-   }
-
-.section-gallery {
-list-style: none;
-display: flex;
+.gallery,
+.galery-title .section-gallery {
+    display: none;
 }
 
-.section-photo:not(:last-child) {
-margin-right: 24px;
-}
+
 
 .team-section {
 background-color: var(--team-background-color);
 text-align: center;
+padding-top: 96px;
+padding-bottom: 96px;
+}
+
+.team-list {
+display: flex;
+flex-direction: column;
+align-items: center;
 }
 
 .team-card-photo {
@@ -621,6 +672,7 @@ text-align: center;
 }
 
 .team-title-list {
+    max-width: 264px;
     background-color: #FFFFFF;
     padding-bottom: 32px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -629,8 +681,9 @@ text-align: center;
 }
 
 .team-title-list:not(:last-child) {
-    margin-right: 24px;
+    margin-bottom: 72px;
 }
+
 
 .team-title {
     font-weight: 700;
@@ -694,25 +747,35 @@ text-align: center;
 
 /*--------------------Customers------------------*/
 .subtitle {
+    font-weight: 700;
     text-align: center;
     font-size: 36px;
     line-height: 1.11;
+    letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2e2f42;
     margin-bottom: 72px;
 }
 .customers {
-    padding-bottom: 120px;
-    padding-top: 120px;
+    padding-bottom: 96px;
+    padding-top: 96px;
+}
+
+@media screen and (min-width: 380px) {
+    .customers-item {
+        flex-basis: calc((100% - 16px) / 2);
+    }
+}
+
+.customers-item {
+    max-width: 190px;
 }
 
 .customers-link {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 168px;
-    height: 88px;
-    margin-right: 24px;
+    padding: 15px 31px;
     border: 1px solid #8e8f99;
     border-radius: 4px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -848,7 +911,7 @@ text-align: center;
 }
 
 .modal {
-    width: 408px;
+    width: 392px;
     min-height: 584px;
     background: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -883,6 +946,23 @@ background-color: #E7E9FC;
 border: 1px solid rgba(0, 0, 0, 0.1);
 cursor: pointer;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-close {
+display: flex;
+justify-content: center;
+align-items: center;
+position: absolute;
+top: 24px;
+right: 24px;
+width: 24px;
+height: 24px;
+border-radius: 50%;
+fill: #2E2F42;
+border: 1px solid rgba(0, 0, 0, 0.1);
+cursor: pointer;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .modal-close:hover, 
