--- a/css/tablet.css
+++ b/css/tablet.css
@@ -103,6 +103,10 @@ screen and (min-resolution: 2dppx) and (min-width: 768px) {
     flex-basis: calc((100% - 2 * 16px) / 3);
 }
 
+.flex-list {
+    column-gap: 24px;
+}
+
 
 
 .footer-box {
